--- a/Resume.tex
+++ b/Resume.tex
@@ -26,7 +26,7 @@
 \Author{石黒 優}
 \aAuthor{Yu ISHIGURO}
 \ID{C0116327}
-\Title{Context Awarenessに基づくパーソナルサーバサービスの提案と実装}
+\Title{Context Awarenessに基づくパーソナルサーバサービスの提案と実装！}
 \Laboratory{田胡・松岡}
 \HeaderSubject{2019年度 コンピュータサイエンス学部 中間発表}
 \Date{2019年08月19日}
