fix sample Resume.tex

--- a/Resume.tex
+++ b/Resume.tex
@@ -1,35 +1,17 @@
-%======================================================% 
-%----- T-lab LaTeX Template for "Resume" 
-% 
-%--- Please read "README" by all means (sakura) 
-%======================================================% 
-
-%------------------------------------------------------% 
-%- Documentclass & Basic setting 
-%------------------------------------------------------% 
-
-\documentclass[a4j,twocolumn]{jsarticle} 
+\documentclass[a4j,twocolumn]{jsarticle}
 
 % Import original package 
-\usepackage{./conf/t-lab} 
-\usepackage{./conf/style} 
+\usepackage{./conf/t-lab}
+\usepackage{./conf/style}
 \input{./conf/conf} 
 
-% 英語で書こうと思う人は，以下をコメントアウトするとそれっぽいとこが英語になって良い 
-% jsarticle -> article するとコンパイルできんなるので． 
-% \renewcommand{\tablename}{Table.} 
-% \renewcommand{\figurename}{Fig.} 
-% \renewcommand{\refname}{References} 
-
-% Define basic information 
-% - ここら辺を空気読んで編集して 
-\Author{石黒 優}
+\Author{yu ishiguro}
 \aAuthor{Yu ISHIGURO}
-\ID{C0116327}
-\Title{Context Awarenessに基づくパーソナルサーバサービスの提案と実装！}
+\ID{Cxxxxxxx}
+\Title{title}
 \Laboratory{田胡・松岡}
-\HeaderSubject{2019年度 コンピュータサイエンス学部 中間発表}
-\Date{2019年08月19日}
+\HeaderSubject{xxxx年度 コンピュータサイエンス学部 中間発表}
+\Date{xxxx年xx月xx日}
 
 
 %------------------------------------------------------% 
@@ -39,79 +21,13 @@
 \begin{document} 
 \twocolumn[\makeHeader]
 
-\section{背景}
-\subsection{webサービスにおけるユーザ最適化の現状}
-現代の多くのwebサービスは, 利用者の大量のデータを集めてセグメント毎にレコメンドの最適化を行い, マーケティング効果を向上させている.
-しかし, セグメントという単位での最適化では, その個人に対しての最適化がなされていないため, 確実に利用者の意図に沿うとは限らず, 利用者に忖度した結果とならない.
+\section{section}
+\subsection{subsection-1}
+this is subsection-1.
 
-\subsection{個人情報の扱い}
-利用者個人に対しての最適化は, 技術的には可能であるが, 個人情報の取り扱いが問題となり, 実現が困難である.
-つまり, 利用者のデータを吸い上げてまとめて最適化するモデルは限界を迎えつつあり, 全く新しいモデルを考えなければならない段階にあると言える.
+\subsection{subsection-2}
+this is subsection-2.
 
-%------------------------------------------------------% 
-
-\section{提案}
-前節で述べた問題を解決する為, 「パーソナルサーバサービス(Personal Server Service : PSS)」を提案する.
-
-\subsection{新しいユーザ最適化のモデル} 
-現状のwebサービスで用いられているモデルは, 1つのAIに多くの利用者が接続し, AIは多人数に対しての学習をする.
-私が本研究で提案する新しいモデルでは, 利用者1人につきその利用者専用のAIが1つ用意され, その利用者のために最適化されるというものである.
-
-\subsection{パーソナルサーバサービス(以下PSS)の構成}
-PSSの全体構成を, \figref{architecture}に示す.
-\figPst{80}{architecture}{PSSの全体構成}
-利用者は, スマートグラスやスマートフォンなどのモバイル端末, スマート家電をはじめとするIoT機器などの様々な媒体から個人データを送信する.
-送信された個人データは, パートナーアシスタントによって収集され, 分析が行われる. パートナーアシスタントについては, 2.3.1節にて詳しく述べる.
-収集された個人データは, 個人専用の個人データリポジトリに蓄積される. 個人データリポジトリについては, 2.3.2節にて詳しく述べる.
-また, パートナーアシスタント, は利用者との自然会話から, 必要なサービスを判断し, レコメンドシステムに対してリクエストを行う.
-リクエストを受けたレコメンドシステムは, リクエスト内容に応じるサービスを選別し, 個人データリポジトリにある個人データを基に, 利用者に最適化された検索条件や匿名データを生成し, サービス内容を受け取る.
-レコメンドシステムは受け取ったサービス内容をパートナーアシスタントを介して利用者に提供する.
-レコメンドシステムについては, 2.3.3節にて詳しく述べる.
-
-\subsection{PSSの構成要素}
-\subsubsection{パートナーアシスタント}
-膨大な個人データにより学習されたインタラクティブマルチモーダルAIを内包し, 利用者専用のAIアシスタントを提供する.
-専用AIによるアシスタントでは, 利用者の趣味嗜好などを学習し, 個人に最適化された学習結果を形成する.
-PSS利用者が複数存在した場合でも, 利用者ごとのパートナーアシスタントは全く違った学習結果を持ち, それぞれが利用者に対して異なる情報を保持することで, 個人専用AIアシスタントの提供を行うことが可能となる.
-
-\subsubsection{個人データリポジトリ}
-クラウド上にコンテナ技術を用いて構築される, 他の利用者と混在することのない個人専用のデータリポジトリ.
-利用者専用のあらゆる個人データを個人専用のリポジトリのみで収集・管理することにより, 利用者の同意を得ない形での個人データの流用や, 特定企業による個人データの独占を防ぐことができる.
-
-\subsubsection{レコメンドシステム}
-収集された個人データを用いて, 利用者に対し最適な提案を行う機能を提供する.
-PSSでは, 利用者の同意のもとでプラグアブルに外部サービスを追加・拡張する. 
-追加されたサービスからそのサービスに関する情報の取得した上で, 個人データに基づいて利用者にとって忖度された提案を導き出す.
-外部サービス側には利用者を特定しない匿名データとして扱うことによって, 利用者の個人データが外部へ漏洩する事を防ぐことができる.
-
-%------------------------------------------------------% 
-
-\section{プロトタイピング}
-\subsection{目的}
-Context Awarenessに基づくレコメンドシステムを用いて, レコメンドを行う際に重要なコンテキストを検証する.
-
-\subsection{プロトタイプ}
-LINE Botと位置情報収集アプリケーションを用いたプロトタイプを作成した.
-このプロトタイプは, 利用者の位置情報を取得し続け, その位置情報と利用者の趣味・嗜好情報を基に利用者に最適な飲食店情報をレコメンドする.
-
-\subsection{プロトタイプの構成}
-プロトタイプの全体構成を, \figref{proto_architecture}に示す.
-\figPst{80}{proto_architecture}{プロトタイプの全体構成}
-
-\subsection{プロトタイプの実行例}
-利用者の検索履歴と位置情報, また時間帯を基にレコメンドを行なっている.
-レコメンドの動作をしている画像を, \figref{recommend}に示す.
-\figPst{35}{recommend}{レコメンドの動作画像}
-レコメンド後, 利用者の要望を基に再度レコメンドしている.
-また, 個人データリポジトリの予算傾向を1段低く更新し, 以降のレコメンドに反映させる.
-ユーザのレコメンドを基に再度レコメンドしている画像を, \figref{re-recommend}に示す.
-\figPst{35}{re-recommend}{再レコメンドの動作画像}
-
-%------------------------------------------------------% 
-
-\section{最終目標}
-\subsection{本研究の目標}
-本開発は最終的に, オープンソースによる公開を行うと同時にサービス事業者への売り込みを行い, 大規模なビジネスの展開を行うことを目標とする.
 
 
 %------------------------------------------------------% 
@@ -119,8 +35,7 @@ LINE Botと位置情報収集アプリケーションを用いたプロトタイ
 %------------------------------------------------------% 
 
 \begin{thebibliography}{99}
-\bibURL{gdpr}{EU一般データ保護規則（General Data Protection Regulation：GDPR）}{EUR-Lex}{http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.L\_.2016.119.01.0001.01.ENG\&toc=OJ:L:2016:119:TOC}{2019/07/08}
-\bib{context_awareness_application}{上岡 英史 著}{コンテクストアウェアネスを用いたアプリケーションの研究動向}{IPSJ Magazine Vol.44 No.3 Mar. 2003, pp265-269}
+
 \end{thebibliography} 
 
 \end{document} 
